--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class="div_search">
 			<input type="text" id="txt_search" />
-			<button value="GO" id="btn_submit"/>
+			<button value="GO" id="btn_submit">GO</button>
 		</div>
 		<div class="content">
 			<p class="summy_result"></p>载入中...</p></p>
@@ -22,7 +22,7 @@
 <script src="settings.js"></script>
 
 <script type="text/javascript">
-	alert(rpcurl);
+	//alert(rpcurl);
 	var tpl = '<ul><li>{nick}</li><li>{date}</li><li>{message}</li></ul>';
 	var q = '';
 	$("#btn_submit").click(
