--- a/search.html
+++ b/search.html
@@ -11,15 +11,18 @@
             .container ul li {
                 list-style: none;
             }
-
-        .div_search {
+        .div_header {
             width: 96%;
             border-bottom: solid 1px #ccc;
         }
-            .div_search .logo {
+            .div_header .logo {
                 width:126px;
                 height:30px;
             }
+
+        .div_search {
+            width: 96%;
+        }
 
         .inputs {
             margin: 8px auto;
@@ -78,7 +81,7 @@
         <button value="GO" id="btn_submit">GO</button>
     </div>
     <div class="content">
-        <p class="summy_result"></p>载入中...</p></p>
+        <p class="summy_result"></p>
         <div class="result">
         </div>
     </div>
