消息处理为文本.

--- a/search.html
+++ b/search.html
@@ -90,7 +90,7 @@
 
 <script src="settings.js"></script>
 <script type="text/javascript">
-var tpl = '<ul class="r"><li class="t"><span>{nick}</span>:</li><li class="c"><span class="d">{date}</span>{message}</li></ul>';
+var tpl = '<ul class="r"><li class="t"><span><pre>{nick}</pre></span>:</li><li class="c"><span class="d">{date}</span><pre>{message}</pre></li></ul>';
 var q = '';
 $("#btn_submit").click(
     function()
