--- a/search.html
+++ b/search.html
@@ -90,7 +90,7 @@
 
 <script src="settings.js"></script>
 <script type="text/javascript">
-var tpl = '<ul class="r"><li class="t"><span><pre>{nick}</pre></span>:</li><li class="c"><span class="d">{date}</span><pre>{message}</pre></li></ul>';
+var tpl = '<ul class="r"><li class="t"><span><pre>{nick}</pre></span>:</li><li class="c"><span class="d"><a href="/{channel}/{datefile}.html" target="_blank">{date}</a></span><pre>{message}</pre></li></ul>';
 var q = '';
 $("#btn_submit").click(
     function()
@@ -108,6 +108,8 @@ $("#btn_submit").click(
                     var tmp = tpl;
                     tmp = tmp.replace(/{nick}/g, ret.data[i]['nick']);
                     tmp = tmp.replace(/{date}/g, ret.data[i]['date']);
+                    tmp = tmp.replace(/{channel}/g, channel);
+                    tmp = tmp.replace(/{datefile}/g, ret.data[i]['date'].split(' ')[0].replace(/\-/g, ''));
                     tmp = tmp.replace(/{message}/g, ret.data[i]['message']);
                     $("div.result").append(tmp);
                 }
