--- a/index.html
+++ b/index.html
@@ -1,50 +1,276 @@
-<html>
-	<head>
-		<title>Search Engine</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-		<script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-	</head>
-	<body>
-		<div class="div_search">
-			<input type="text" id="txt_search" />
-			<button value="GO" id="btn_submit" type="submit"/>
-		</div>
-		<div class="content">
-			<p class="summy_result"></p>
-			<div class="result">
-			</div>
-		</div>
-	</body>
+﻿<html>
+<head>
+    <title>Search Engine</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <!--<script src="jquery.min.js"></script>-->
+    <script src="settings.js"></script>
+    <script type="text/javascript">
+        (function () {
+            var request = function (sParamName) {
+                var sSearch = location.search;
+                var oParam = {};
+                sSearch = sSearch.substr(1, sSearch.length);
+                var params = sSearch.split("&");
+                for (var i = 0; i < params.length; i++) {
+                    var param = params[i].split("=");
+                    var key = param[0];
+                    var value = param[1];
+                    if (key in oParam) {
+                        (oParam[key].constructor == Array) ? oParam[key].push(value) : oParam[key] = [oParam[key], value];
+
+                    }
+                    else {
+                        oParam[key] = value;
+                    }
+                }
+                return (oParam[sParamName]) ? decodeURIComponent(oParam[sParamName]) : ""
+
+            };
+
+            $.request = request;
+        })();
+
+        var avsearch = {
+            options: {
+                channel_def: "3597082",
+                rpcurl: "https://avlog.avplayer.org/rpc/search?",
+                tpl: '<ul class="r"><li class="t"><span>{nick}</span>:</li><li class="c"><span class="d">{date}</span>{message}</li></ul>',
+                search_url: function () {
+                    return (location.href.indexOf("?") > -1 ? location.href.substr(0, location.href.indexOf("?")) : location.href);
+                },
+                is_debug: false
+            },
+            fn: {
+                autoLockSearch: function (a, b) {
+                    $("#" + a).keydown(function (n) {
+                        var t = n ? n : window.event ? window.event : "";
+                        t.keyCode == 13 && $("#" + b).click();
+                    });
+                }
+            },
+            channelGet: function () {
+                var c = avsearch.options.channel_def;
+                $("div.div_search span[class=hov]").each(function (i) {
+                    if ($(this).attr("class") == "hov") {
+                        c = $(this).attr("channel");
+                    }
+                });
+                return c;
+            },
+            channelSet: function (c) {
+                var f = false;
+                $("div.div_search span").each(function (i) {
+                    if ($(this).attr("channel") == c) {
+                        $(this).attr("class", "hov");
+                        f = true;
+                    } else {
+                        $(this).attr("class", "");
+                    }
+
+                    if ($(this).attr("onclick") == null || $(this).attr("onclick") == "") {
+                        avsearch.changeChannel = function (o) {
+                            var c = $(o).attr("channel");
+                            avsearch.channelSet(c);
+                            var q = decodeURIComponent($("#txt_search").val());
+                            if (q != "") {
+                                avsearch.search();
+                            }
+                        };
+                        $(this).attr("onclick", "avsearch.changeChannel(this)");
+                    }
+
+                });
+                if (!f) {
+                    $($("div.div_search span")[0]).attr("class", "hov");
+                }
+            },
+            searchAction: function (q, channel) {
+                $("div.content p.summy_result").hide();
+                $("div.result").html('载入中...');
+                var debug = avsearch.options.is_debug;
+                $.get((!debug ?
+                    rpcurl + 'channel=' + channel + '&q=' + q + '&date=' :
+                    q + (channel == "3597082" ? "1" : "2") + '.json'),   //local test
+                    function (ret) {
+                        if (debug) { ret = $.parseJSON(ret); }
+                        $("div.content p.summy_result").html('返回 <span>' + ret.params.num_results + '</span> 条结果 (用时 ' + ret.params.time_used + '秒):').show();
+                        $("div.result").html('');
+                        for (var i = 0; i < ret.data.length; i++) {
+                            var tmp = avsearch.options.tpl;
+                            tmp = tmp.replace(/{nick}/g, ret.data[i]['nick']);
+                            tmp = tmp.replace(/{date}/g, ret.data[i]['date']);
+                            tmp = tmp.replace(/{message}/g, $("#someclass").text(ret.data[i]['message']).html());
+                            $("div.result").append(tmp);
+                        }
+
+			$("#someclass").text('');
+                    }
+                );
+            },
+            search: function () {
+                var searchtext = decodeURIComponent($("#txt_search").val());
+                var channel = avsearch.channelGet();
+                if (window.history.pushState) {
+                    var state = {
+                        title: document.title
+                        , url: document.location.href
+                        , search: searchtext
+                        , channel: channel
+                    }
+                    var url = avsearch.options.search_url() + "?searchtext=" + searchtext + "&channel=" + channel;
+                    window.history.pushState(state, document.title, url);
+                }
+                avsearch.searchAction(searchtext, channel);
+            },
+            init: function () {
+                avsearch.fn.autoLockSearch("txt_search", "btn_submit");
+                window.addEventListener("popstate", function (a) {
+                    if (a && a.state) {
+                        var q = a.state.search;
+                        var c = a.state.channel;
+                        $("#txt_search").val(q);
+                        avsearch.channelSet(c);
+                        avsearch.searchAction(q, c);
+                    } else {
+                        //$("#txt_search").val("");
+                        //avsearch.channelSet();
+                        $("div.content p.summy_result").hide();
+                        $("div.result").html('');
+                    }
+                });
+
+                $("#btn_submit").click(function () {
+                    avsearch.search();
+                });
+
+                var q = $.request("searchtext");
+                var c = $.request("channel");
+                $("#txt_search").val(q);
+                avsearch.channelSet(c ? c : avsearch.options.channel_def);
+
+                if (q != '') {
+                    avsearch.search();
+                }
+
+
+            }
+        };
+
+        $(function () {
+
+            //init
+            avsearch.init();
+        });
+    </script>
+    <style type="text/css">
+        .container {
+            width: 96%;
+            padding: 10px 20px;
+        }
+
+            .container ul li {
+                list-style: none;
+            }
+
+        .div_search {
+            width: 96%;
+            border-bottom: solid 1px #ccc;
+        }
+
+            .div_search .logo {
+                width: 126px;
+                height: 30px;
+            }
+
+            .div_search span {
+                border-left: solid 1px #ccc;
+                padding-left: 5px;
+                cursor: pointer;
+                font-size: 9px;
+                color:#ccc;
+            }
+
+                .div_search span:hover {
+                    color: #FFA517;
+                }
+
+                .div_search span.hov {
+                    font-size: 16px;
+                    color: #FFA517;
+                }
+
+        .inputs {
+            margin: 8px auto;
+            clear: both;
+            width: 100%;
+        }
+
+        #txt_search {
+            width: 521px;
+            line-height: 24px;
+            padding: 0 7px;
+        }
+
+        #btn_submit {
+            height: 32px;
+            width: 95px;
+            cursor: pointer;
+        }
+
+        .content {
+            width: 96%;
+        }
+
+        .summy_result span {
+            color: #FFA517;
+            font-size: 11pt;
+        }
+
+        .r {
+            border-bottom: dotted 1px #ccc;
+            line-height: 24px;
+            margin-bottom: 3px;
+        }
+
+            .r .t {
+                color: #1E79A7;
+            }
+
+            .r .c {
+            }
+
+                .r .c .d {
+                    color: #008000;
+                    font-size: 9px;
+                    margin-right: 10px;
+                }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="div_search">
+            <div>
+                <img src="https://avlog.avplayer.org/search/img/searchlogo.png" width="126" height="30" />
+                <span channel="3597082">avplayer.org</span>
+                <span channel="69195329">OpenERP-开发</span>
+            </div>
+            <div class="inputs">
+                <!--<select id="sel_channel">
+                    <option value="3597082">avplayer.org</option>
+                    <option value="69195329">OpenERP-开发</option>
+                </select>-->
+                <input type="text" id="txt_search" />
+                <input type="button" value="Search" id="btn_submit" />
+            </div>
+        </div>
+        <div class="content">
+            <p class="summy_result"></p>
+            <div class="result">
+            </div>
+        </div>
+    </div>
+</body>
+<div id="someclass"></div>
 </html>
 
-<script src="settings.js"></script>
-
-<script type="text/javascript">
-	var tpl = '<ul><li>{nick}</li><li>{date}</li><li>{message}</li></ul>';
-	var q = '';
-	$("#btn_submit").click(
-		function()
-		{
-			q = decodeURIComponent($("#txt_search").val());
-			$("div.result").html('载入中...');
-			$.get(
-				rpcurl + 'channel='+channel+'&q='+q+'&date=',
-				function(ret)
-				{
-					$("div.content p.summy_result").html('返回 '+ret.params.num_results+' 条结果:');
-					$("div.result").html('');
-					for(var i=0; i<ret.data.length; i++)
-					{
-						var tmp = tpl;
-						tmp = tmp.replace(/{nick}/g, ret.data[i]['nick']);
-						tmp = tmp.replace(/{date}/g, ret.data[i]['date']);
-						tmp = tmp.replace(/{message}/g, ret.data[i]['message']);
-						$("div.result").append(tmp);
-					}
-				}
-			);
-		}
-   );
-</script>
