接收功能初步完成

--- a/client.html
+++ b/client.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Chat test</title>
+    <title>Avplayer Chat</title>
  <style type="text/css">
      .container
      {
@@ -100,7 +100,7 @@
 <body>
     <div id="skm_LockPane" class="LockOff"></div>
     <form id="form1" runat="server">
-        <h1> Chat test </h1>
+        <h1> Avplayer Chat </h1>
         <br />
         用户名： <input type="text" id="txtName" value="访客1234"/>
         <br />
