听博士说的改成：post使用json发送数据，而不是直接传输消息文本

--- a/client.html
+++ b/client.html
@@ -129,10 +129,11 @@
         	var nickname = $("#txtName").val();
         	var inputtext = $("#DataToSend").val();
         	var msgtext = nickname + " 说 :" + inputtext;
-        $.post(theMessageURL,msgtext,
+        $.post(theMessageURL,
+        "{ \"protocol\":\"rpc\",\"channel\":\"3597082\",\"message\":{\"text\" : \"" + msgtext + "\"} }" ,
     	 	function(data,status){
 		    ;
-		  });
+		  },"json");
 		  	$("#DataToSend").val("");
 		}
 		function showmysendmessage()
