--- a/client.html
+++ b/client.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Avplayer Chat</title>
@@ -61,6 +61,10 @@
             initusername();
             appendmessage(arrList[0]);	//append welcome message
             getoldmessagefromajax();
+            $("#DataToSend").keydown(function(event){
+			if(event.keyCode == 13)
+				postmessagetoajax();
+		})
         });
         function initusername()
         {
@@ -116,6 +120,11 @@
 	            msg.message = data1.message.text;
 	            msg.id = "0";
 	           }
+	           var lastMsg = arrList[arrList.length-1];
+	           if( lastMsg.channel == msg.channel 	//the same to last message
+	           && lastMsg.date == msg.date 
+	           && lastMsg.message == msg.message )
+	           	getnewmessagefromajax();
 	            if((msg.channel != "3597082") && (msg.channel != 3597082) && msg.channel != "")
 	            	getnewmessagefromajax();
 	            appendmessage(msg);
@@ -134,6 +143,7 @@
     	 	function(data,status){
 		    ;
 		  },"json");
+		  showmysendmessage();
 		  	$("#DataToSend").val("");
 		}
 		function showmysendmessage()
@@ -149,12 +159,7 @@
 	        appendmessage(msg);
 	        arrList.push(msg);
 		}
-        function EnterPress(e){ //传入 event 
-			var e = e || window.event; 
-			if(e.keyCode == 13){ 
-					postmessagetoajax();
-				} 
-		} 
+		
     </script>
 </head>
 <body>
@@ -167,8 +172,7 @@
         <br />
         <div id='Container' class='container'></div>
         <div id='SendDataContainer'>
-        <input type="text" id="DataToSend" size="88" style="width:90%;;height:25px;" onkeydown="EnterPress()" 
-详细出处参考：http://www.jb51.net/article/23798.htm/>
+        <input type="text" id="DataToSend" size="88" style="width:90%;;height:25px;" />
         <button id='SendData' type="button" style="width:9%;height:25px;" onclick='postmessagetoajax()'>发 送</button>
         </div>
         <br />
