为了避免avbot造成的重复回传消息的bug，不得已只能这样做了

--- a/client.html
+++ b/client.html
@@ -122,7 +122,7 @@
 	           }
 	           var lastMsg = arrList[arrList.length-1];
 	           if( lastMsg.channel == msg.channel 	//the same to last message
-	           && lastMsg.date == msg.date 
+	           //&& lastMsg.date == msg.date 
 	           && lastMsg.message == msg.message )
 	           	getnewmessagefromajax();
 	            if((msg.channel != "3597082") && (msg.channel != 3597082) && msg.channel != "")
