--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Search Engine</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js"></script>
     <!--<script src="jquery.min.js"></script>-->
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <script src="settings.js"></script>
