http://avplayer.org修改错误的社区首页地址

--- a/client.html
+++ b/client.html
@@ -190,7 +190,7 @@
     </form>
     
     <div>
-	<p style="text-shadow:1px 1px 1px #aaaaaa;">中国技术第一的开源社区——<a href="https://www.avplayer.org" target="_blank">avplayer 开源社区</a></p>
+	<p style="text-shadow:1px 1px 1px #aaaaaa;">中国技术第一的开源社区——<a href="http://avplayer.org" target="_blank">avplayer 开源社区</a></p>
 </div>
 </body>
 </html>
