更改容易导致js报错的jquery cdn地址为sina新cdn地址

--- a/client.html
+++ b/client.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>Avplayer开源社区在线交流平台</title>
 <link href="css/chatstyle.css" type="text/css" rel="stylesheet" />
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js"></script>
+    <script src="http://lib.sinaapp.com/js/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript">
 	var theSearchURL = "https://avlog.avplayer.org/rpc/search?channel=3597082&q=&date=";
 	var theMessageURL = "https://avlog.avplayer.org/rpc/message";
